Fix T62870: progress in taskbar not updated when cancelling render